<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_main"
        android:minHeight="50dp"
        android:layout_gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="관리자"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="50dp">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_gravity="center">

            <kr.project.dongyang.el.ibda.ibda_admin.button.SquareButton
                android:id="@+id/main_btn_members"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:maxHeight="50dp"
                android:drawableTop="@drawable/ic_baseline_person_search_50_white"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/main_btn_members"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_ripple_round_blue">
            </kr.project.dongyang.el.ibda.ibda_admin.button.SquareButton>

            <kr.project.dongyang.el.ibda.ibda_admin.button.SquareButton
                android:id="@+id/main_btn_clothes"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:maxHeight="50dp"
                android:drawableTop="@drawable/ic_baseline_local_grocery_store_50_white"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/main_btn_clothes"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_ripple_round_blue">
            </kr.project.dongyang.el.ibda.ibda_admin.button.SquareButton>

            <kr.project.dongyang.el.ibda.ibda_admin.button.SquareButton
                android:id="@+id/main_btn_inventory"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:maxHeight="50dp"
                android:drawableTop="@drawable/ic_baseline_insert_chart_outlined_50_white"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/main_btn_inventory"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_ripple_round_blue">
            </kr.project.dongyang.el.ibda.ibda_admin.button.SquareButton>

            <kr.project.dongyang.el.ibda.ibda_admin.button.SquareButton
                android:id="@+id/main_btn_setting"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:maxHeight="50dp"
                android:drawableTop="@drawable/ic_baseline_build_50_white"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/main_btn_setting"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_ripple_round_blue">
            </kr.project.dongyang.el.ibda.ibda_admin.button.SquareButton>
        </GridLayout>
    </LinearLayout>

</LinearLayout>